@@ -1,0 +1,131 @@
+# Strings for Dialog Library W2XDialogs=Your language
+0.XhtmlOptions.HelpText=
+1.XhtmlOptions.Title=XHTML asetukset (Writer2xhtml)
+2.XhtmlOptions.StyleLabel.HelpText=
+3.XhtmlOptions.StyleLabel.Label=Tyylit
+4.XhtmlOptions.ConfigLabel.HelpText=
+5.XhtmlOptions.ConfigLabel.Label=K\u00e4yt\u00e4 tyyli\u00e4
+6.XhtmlOptions.Config.HelpText=
+17.XhtmlOptions.ScalingLabel.HelpText=
+18.XhtmlOptions.ScalingLabel.Label=Skaalaus
+19.XhtmlOptions.Scaling.HelpText=
+20.XhtmlOptions.ScalingPercentLabel.HelpText=
+21.XhtmlOptions.ScalingPercentLabel.Label=%
+22.XhtmlOptions.ColumnScalingLabel.HelpText=
+23.XhtmlOptions.ColumnScalingLabel.Label=Sarakkeen skaalaus
+24.XhtmlOptions.ColumnScaling.HelpText=
+25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
+26.XhtmlOptions.ColumnScalingPercentLabel.Label=
+27.XhtmlOptions.ConvertToPx.HelpText=
+28.XhtmlOptions.ConvertToPx.Label=Muunna yksik\u00f6t pikseleiksi (px)
+29.XhtmlOptions.OriginalImageSize.HelpText=
+30.XhtmlOptions.OriginalImageSize.Label=K\u00e4yt\u00e4 alkuper\u00e4ist\u00e4 kuvakokoa
+31.XhtmlOptions.SpecialContentLabel.HelpText=
+32.XhtmlOptions.SpecialContentLabel.Label=Muut asetukset
+33.XhtmlOptions.Notes.HelpText=
+34.XhtmlOptions.Notes.Label=Vie huomautukset
+35.XhtmlOptions.UseDublinCore.HelpText=
+36.XhtmlOptions.UseDublinCore.Label=Vie dokumentin ominaisuudet (Dublin Core Metadata)
+37.XhtmlOptions.AutoCorrectLabel.HelpText=
+38.XhtmlOptions.AutoCorrectLabel.Label=Automaattinen korjaus
+39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Ohita pakotetut rivinvaihdot
+41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Ohita tyhj\u00e4t kappaleet
+43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Ohita kaksoisv\u00e4lily\u00f6nnit
+45.XhtmlOptions.FilesLabel.HelpText=
+46.XhtmlOptions.FilesLabel.Label=Tiedostot
+47.XhtmlOptions.Split.HelpText=
+48.XhtmlOptions.Split.Label=Jaa dokumentti otsikon kohdalta
+49.XhtmlOptions.SplitLevelLabel.HelpText=
+50.XhtmlOptions.SplitLevelLabel.Label=Otsikkotasot
+51.XhtmlOptions.SplitLevel.HelpText=
+52.SplitLevel.StringItemList=1
+53.SplitLevel.StringItemList=2
+54.SplitLevel.StringItemList=3
+55.SplitLevel.StringItemList=4
+56.SplitLevel.StringItemList=5
+57.SplitLevel.StringItemList=6
+58.XhtmlOptions.RepeatLevelsLabel.HelpText=
+59.XhtmlOptions.RepeatLevelsLabel.Label=Repeat heading levels
+60.XhtmlOptions.RepeatLevels.HelpText=
+61.RepeatLevels.StringItemList=0
+62.RepeatLevels.StringItemList=1
+63.RepeatLevels.StringItemList=2
+64.RepeatLevels.StringItemList=3
+65.RepeatLevels.StringItemList=4
+66.RepeatLevels.StringItemList=5
+67.XhtmlOptions.SaveImagesInSubdir.HelpText=
+68.XhtmlOptions.SaveImagesInSubdir.Label=Tallenna kuva alakansioon
+69.XhtmlOptions.XsltPathLabel.HelpText=
+70.XhtmlOptions.XsltPathLabel.Label=XSLT polku
+71.XhtmlOptions.XsltPath.HelpText=
+72.XhtmlOptions.XsltPath.Text=
+73.XhtmlOptions.ExportButton.HelpText=
+74.XhtmlOptions.ExportButton.Label=Vie
+75.XhtmlOptions.CancelButton.HelpText=
+76.XhtmlOptions.CancelButton.Label=Peruuta
+77.XhtmlOptionsCalc.HelpText=
+78.XhtmlOptionsCalc.Title=XHTML asetukset (Calc2Latex)
+79.XhtmlOptionsCalc.StyleLabel.HelpText=
+80.XhtmlOptionsCalc.StyleLabel.Label=Tyyli
+81.XhtmlOptionsCalc.ConfigLabel.HelpText=
+82.XhtmlOptionsCalc.ConfigLabel.Label=K\u00e4yt\u00e4 tyyli\u00e4
+83.XhtmlOptionsCalc.Config.HelpText=
+86.XhtmlOptionsCalc.ScalingLabel.HelpText=
+87.XhtmlOptionsCalc.ScalingLabel.Label=Skaalaus
+88.XhtmlOptionsCalc.Scaling.HelpText=
+89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
+90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
+91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Sarakkeen skaalaus
+93.XhtmlOptionsCalc.ColumnScaling.HelpText=
+94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
+95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
+96.XhtmlOptionsCalc.ConvertToPx.HelpText=
+97.XhtmlOptionsCalc.ConvertToPx.Label=Muunna yksik\u00f6t pikseleiksi (px)
+98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
+99.XhtmlOptionsCalc.OriginalImageSize.Label=K\u00e4yt\u00e4 alkuper\u00e4ist\u00e4 kuvakokoa
+100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Muut asetukset
+102.XhtmlOptionsCalc.Notes.HelpText=
+103.XhtmlOptionsCalc.Notes.Label=Vie huomautukset
+104.XhtmlOptionsCalc.UseDublinCore.HelpText=
+105.XhtmlOptionsCalc.UseDublinCore.Label=Vie dokumentin ominaisuudet (Dublin Core Metadata)
+106.XhtmlOptionsCalc.SheetsLabel.HelpText=
+107.XhtmlOptionsCalc.SheetsLabel.Label=Laskentataulukon sivu
+108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=N\u00e4yt\u00e4 piiloitetut sivut
+110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=N\u00e4yt\u00e4 piiloitetut sivut
+112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=N\u00e4yt\u00e4 suodatetut rivit ja sarakkeet
+114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=K\u00e4yt\u00e4 tulostusaluetta
+116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Use title as heading
+118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Use sheet names as headings
+120.XhtmlOptionsCalc.FilesLabel.HelpText=
+121.XhtmlOptionsCalc.FilesLabel.Label=Tiedostot
+122.XhtmlOptionsCalc.CalcSplit.HelpText=
+123.XhtmlOptionsCalc.CalcSplit.Label=Tallenna sivut omiksi tiedostoiksi
+124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Tallenna kuvat alakansioon
+126.XhtmlOptionsCalc.ExportButton.HelpText=
+127.XhtmlOptionsCalc.ExportButton.Label=Vie
+128.XhtmlOptionsCalc.CancelButton.HelpText=
+129.XhtmlOptionsCalc.CancelButton.Label=Peruuta
+130.Config.StringItemList=Alkuper\u00e4inen muotoilu
+131.Config.StringItemList=Suklaa
+132.Config.StringItemList=Keskiy\u00f6
+133.Config.StringItemList=Moderni
+134.Config.StringItemList=Vanhanaikainen
+135.Config.StringItemList=Steely
+136.Config.StringItemList=Sveitsil\u00e4inen
+137.Config.StringItemList=Perinteinen
+138.Config.StringItemList=Ultramariini
+139.Config.StringItemList=Custom
+140.Config.StringItemList=Alkuper\u00e4inen muotoilu
+141.Config.StringItemList=Custom
